feature: add find by dni and ruc endpoints
